--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             justify-content: center; /* Centrar las filas */
             margin-bottom: 20px; /* Espacio entre filas */
             width: 100%; /* Ancho completo */
+            position: relative; /* Posición relativa para superponer cartas */
+            height: 200px; /* Altura fija para las filas */
         }
         .card {
             background: #f9f9f9; /* Fondo de las cartas */
